dateset/chaos-mesh-master/helm/chaos-mesh/controller-manager-deployment.yaml
# Source: chaos-mesh/templates/controller-manager-deployment.yaml
# Copyright 2021 Chaos Mesh Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: "default"
  name: chaos-controller-manager
  labels:
    helm.sh/chart: chaos-mesh-0.0.0
    app.kubernetes.io/name: chaos-mesh
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: chaos-mesh
    app.kubernetes.io/version: 0.0.0
    app.kubernetes.io/component: controller-manager
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: chaos-mesh
      app.kubernetes.io/instance: my-release
      app.kubernetes.io/component: controller-manager
  template:
    metadata:
      labels:
        helm.sh/chart: chaos-mesh-0.0.0
        app.kubernetes.io/name: chaos-mesh
        app.kubernetes.io/instance: my-release
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/part-of: chaos-mesh
        app.kubernetes.io/version: 0.0.0
        app.kubernetes.io/component: controller-manager
      annotations:
        rollme: "0j3Rw"
    spec:
      securityContext:
            {}
      serviceAccountName: chaos-controller-manager
      containers:
      - name: chaos-mesh
        image: ghcr.io/chaos-mesh/chaos-mesh:latest
        imagePullPolicy: IfNotPresent
        resources:
            limits: {}
            requests:
              cpu: 25m
              memory: 256Mi
        command:
          - /usr/local/bin/chaos-controller-manager
        volumeMounts:
          - name: webhook-certs
            mountPath: /etc/webhook/certs
            readOnly: true
          - name: chaos-daemon-client-cert
            mountPath: /etc/chaos-daemon/cert
            readOnly: true
          - name: chaosd-client-cert
            mountPath: /etc/chaosd/cert
            readOnly: true
        ports:
          - name: webhook
            containerPort: 10250
          - name: http
            containerPort: 10080
          - name: pprof
            containerPort: 10081
          - name: ctrl
            containerPort: 10082
      volumes:
        - name: webhook-certs
          secret:
            secretName: chaos-mesh-webhook-certs
        - name: chaos-daemon-client-cert
          secret:
            secretName: chaos-mesh-daemon-client-certs
        - name: chaosd-client-cert
          secret:
            secretName: chaos-mesh-chaosd-client-certs
