dateset/chaos-mesh-master/helm/chaos-mesh/mutating-admission-webhooks.yaml
# Source: chaos-mesh/templates/mutating-admission-webhooks.yaml
# Copyright 2022 Chaos Mesh Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: chaos-mesh-mutation
  labels:
    helm.sh/chart: chaos-mesh-0.0.0
    app.kubernetes.io/name: chaos-mesh
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: chaos-mesh
    app.kubernetes.io/version: 0.0.0
    app.kubernetes.io/component: admission-webhook
webhooks:
  - clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURiakNDQWxhZ0F3SUJBZ0lRRVNEOWFRVFJJTUMvTjVTVW9qK3pxREFOQmdrcWhraUc5dzBCQVFzRkFEQVkKTVJZd0ZBWURWUVFERXcxamFHRnZjeTF0WlhOb0xXTmhNQjRYRFRJME1EUXhOekV4TWpFek9Wb1hEVEk1TURReApOakV4TWpFek9Wb3dOREV5TURBR0ExVUVBeE1wWTJoaGIzTXRiV1Z6YUMxamIyNTBjbTlzYkdWeUxXMWhibUZuClpYSXVaR1ZtWVhWc2RDNXpkbU13Z2dFaU1BMEdDU3FHU0liM0RRRUJBUVVBQTRJQkR3QXdnZ0VLQW9JQkFRREcKSTBNdkdPeEFiOEdtRHBvOGdhSHUvNkptczN3Q1FXTUdKSzNPUzdQV20rRWZpK0lkRkZHY0pVTDVvcHBJcWlhTgpDanJyV3FBOXJS [...]
      service:
        name: chaos-mesh-controller-manager
        namespace: "default"
        path: /mutate-chaos-mesh-org-v1alpha1-podchaos
    failurePolicy: Fail
    name: mpodchaos.kb.io
    timeoutSeconds: 5
    sideEffects: None
    admissionReviewVersions: ["v1", "v1beta1"]
    rules:
      - apiGroups:
          - chaos-mesh.org
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
        resources:
          - podchaos
  - clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURiakNDQWxhZ0F3SUJBZ0lRRVNEOWFRVFJJTUMvTjVTVW9qK3pxREFOQmdrcWhraUc5dzBCQVFzRkFEQVkKTVJZd0ZBWURWUVFERXcxamFHRnZjeTF0WlhOb0xXTmhNQjRYRFRJME1EUXhOekV4TWpFek9Wb1hEVEk1TURReApOakV4TWpFek9Wb3dOREV5TURBR0ExVUVBeE1wWTJoaGIzTXRiV1Z6YUMxamIyNTBjbTlzYkdWeUxXMWhibUZuClpYSXVaR1ZtWVhWc2RDNXpkbU13Z2dFaU1BMEdDU3FHU0liM0RRRUJBUVVBQTRJQkR3QXdnZ0VLQW9JQkFRREcKSTBNdkdPeEFiOEdtRHBvOGdhSHUvNkptczN3Q1FXTUdKSzNPUzdQV20rRWZpK0lkRkZHY0pVTDVvcHBJcWlhTgpDanJyV3FBOXJS [...]
      service:
        name: chaos-mesh-controller-manager
        namespace: "default"
        path: /mutate-chaos-mesh-org-v1alpha1-iochaos
    failurePolicy: Fail
    name: miochaos.kb.io
    timeoutSeconds: 5
    sideEffects: None
    admissionReviewVersions: ["v1", "v1beta1"]
    rules:
      - apiGroups:
          - chaos-mesh.org
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
        resources:
          - iochaos
  - clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURiakNDQWxhZ0F3SUJBZ0lRRVNEOWFRVFJJTUMvTjVTVW9qK3pxREFOQmdrcWhraUc5dzBCQVFzRkFEQVkKTVJZd0ZBWURWUVFERXcxamFHRnZjeTF0WlhOb0xXTmhNQjRYRFRJME1EUXhOekV4TWpFek9Wb1hEVEk1TURReApOakV4TWpFek9Wb3dOREV5TURBR0ExVUVBeE1wWTJoaGIzTXRiV1Z6YUMxamIyNTBjbTlzYkdWeUxXMWhibUZuClpYSXVaR1ZtWVhWc2RDNXpkbU13Z2dFaU1BMEdDU3FHU0liM0RRRUJBUVVBQTRJQkR3QXdnZ0VLQW9JQkFRREcKSTBNdkdPeEFiOEdtRHBvOGdhSHUvNkptczN3Q1FXTUdKSzNPUzdQV20rRWZpK0lkRkZHY0pVTDVvcHBJcWlhTgpDanJyV3FBOXJS [...]
      service:
        name: chaos-mesh-controller-manager
        namespace: "default"
        path: /mutate-chaos-mesh-org-v1alpha1-timechaos
    failurePolicy: Fail
    name: mtimechaos.kb.io
    timeoutSeconds: 5
    sideEffects: None
    admissionReviewVersions: ["v1", "v1beta1"]
    rules:
      - apiGroups:
          - chaos-mesh.org
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
        resources:
          - timechaos
  - clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURiakNDQWxhZ0F3SUJBZ0lRRVNEOWFRVFJJTUMvTjVTVW9qK3pxREFOQmdrcWhraUc5dzBCQVFzRkFEQVkKTVJZd0ZBWURWUVFERXcxamFHRnZjeTF0WlhOb0xXTmhNQjRYRFRJME1EUXhOekV4TWpFek9Wb1hEVEk1TURReApOakV4TWpFek9Wb3dOREV5TURBR0ExVUVBeE1wWTJoaGIzTXRiV1Z6YUMxamIyNTBjbTlzYkdWeUxXMWhibUZuClpYSXVaR1ZtWVhWc2RDNXpkbU13Z2dFaU1BMEdDU3FHU0liM0RRRUJBUVVBQTRJQkR3QXdnZ0VLQW9JQkFRREcKSTBNdkdPeEFiOEdtRHBvOGdhSHUvNkptczN3Q1FXTUdKSzNPUzdQV20rRWZpK0lkRkZHY0pVTDVvcHBJcWlhTgpDanJyV3FBOXJS [...]
      service:
        name: chaos-mesh-controller-manager
        namespace: "default"
        path: /mutate-chaos-mesh-org-v1alpha1-networkchaos
    failurePolicy: Fail
    name: mnetworkchaos.kb.io
    timeoutSeconds: 5
    sideEffects: None
    admissionReviewVersions: ["v1", "v1beta1"]
    rules:
      - apiGroups:
          - chaos-mesh.org
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
        resources:
          - networkchaos
  - clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURiakNDQWxhZ0F3SUJBZ0lRRVNEOWFRVFJJTUMvTjVTVW9qK3pxREFOQmdrcWhraUc5dzBCQVFzRkFEQVkKTVJZd0ZBWURWUVFERXcxamFHRnZjeTF0WlhOb0xXTmhNQjRYRFRJME1EUXhOekV4TWpFek9Wb1hEVEk1TURReApOakV4TWpFek9Wb3dOREV5TURBR0ExVUVBeE1wWTJoaGIzTXRiV1Z6YUMxamIyNTBjbTlzYkdWeUxXMWhibUZuClpYSXVaR1ZtWVhWc2RDNXpkbU13Z2dFaU1BMEdDU3FHU0liM0RRRUJBUVVBQTRJQkR3QXdnZ0VLQW9JQkFRREcKSTBNdkdPeEFiOEdtRHBvOGdhSHUvNkptczN3Q1FXTUdKSzNPUzdQV20rRWZpK0lkRkZHY0pVTDVvcHBJcWlhTgpDanJyV3FBOXJS [...]
      service:
        name: chaos-mesh-controller-manager
        namespace: "default"
        path: /mutate-chaos-mesh-org-v1alpha1-kernelchaos
    failurePolicy: Fail
    name: mkernelchaos.kb.io
    timeoutSeconds: 5
    sideEffects: None
    admissionReviewVersions: ["v1", "v1beta1"]
    rules:
      - apiGroups:
          - chaos-mesh.org
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
        resources:
          - kernelchaos
  - clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURiakNDQWxhZ0F3SUJBZ0lRRVNEOWFRVFJJTUMvTjVTVW9qK3pxREFOQmdrcWhraUc5dzBCQVFzRkFEQVkKTVJZd0ZBWURWUVFERXcxamFHRnZjeTF0WlhOb0xXTmhNQjRYRFRJME1EUXhOekV4TWpFek9Wb1hEVEk1TURReApOakV4TWpFek9Wb3dOREV5TURBR0ExVUVBeE1wWTJoaGIzTXRiV1Z6YUMxamIyNTBjbTlzYkdWeUxXMWhibUZuClpYSXVaR1ZtWVhWc2RDNXpkbU13Z2dFaU1BMEdDU3FHU0liM0RRRUJBUVVBQTRJQkR3QXdnZ0VLQW9JQkFRREcKSTBNdkdPeEFiOEdtRHBvOGdhSHUvNkptczN3Q1FXTUdKSzNPUzdQV20rRWZpK0lkRkZHY0pVTDVvcHBJcWlhTgpDanJyV3FBOXJS [...]
      service:
        name: chaos-mesh-controller-manager
        namespace: "default"
        path: /mutate-chaos-mesh-org-v1alpha1-stresschaos
    failurePolicy: Fail
    name: mstresschaos.kb.io
    timeoutSeconds: 5
    sideEffects: None
    admissionReviewVersions: ["v1", "v1beta1"]
    rules:
      - apiGroups:
          - chaos-mesh.org
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
        resources:
          - stresschaos
  - clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURiakNDQWxhZ0F3SUJBZ0lRRVNEOWFRVFJJTUMvTjVTVW9qK3pxREFOQmdrcWhraUc5dzBCQVFzRkFEQVkKTVJZd0ZBWURWUVFERXcxamFHRnZjeTF0WlhOb0xXTmhNQjRYRFRJME1EUXhOekV4TWpFek9Wb1hEVEk1TURReApOakV4TWpFek9Wb3dOREV5TURBR0ExVUVBeE1wWTJoaGIzTXRiV1Z6YUMxamIyNTBjbTlzYkdWeUxXMWhibUZuClpYSXVaR1ZtWVhWc2RDNXpkbU13Z2dFaU1BMEdDU3FHU0liM0RRRUJBUVVBQTRJQkR3QXdnZ0VLQW9JQkFRREcKSTBNdkdPeEFiOEdtRHBvOGdhSHUvNkptczN3Q1FXTUdKSzNPUzdQV20rRWZpK0lkRkZHY0pVTDVvcHBJcWlhTgpDanJyV3FBOXJS [...]
      service:
        name: chaos-mesh-controller-manager
        namespace: "default"
        path: /mutate-chaos-mesh-org-v1alpha1-awschaos
    failurePolicy: Fail
    name: mawschaos.kb.io
    timeoutSeconds: 5
    sideEffects: None
    admissionReviewVersions: ["v1", "v1beta1"]
    rules:
      - apiGroups:
          - chaos-mesh.org
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
        resources:
          - awschaos
  - clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURiakNDQWxhZ0F3SUJBZ0lRRVNEOWFRVFJJTUMvTjVTVW9qK3pxREFOQmdrcWhraUc5dzBCQVFzRkFEQVkKTVJZd0ZBWURWUVFERXcxamFHRnZjeTF0WlhOb0xXTmhNQjRYRFRJME1EUXhOekV4TWpFek9Wb1hEVEk1TURReApOakV4TWpFek9Wb3dOREV5TURBR0ExVUVBeE1wWTJoaGIzTXRiV1Z6YUMxamIyNTBjbTlzYkdWeUxXMWhibUZuClpYSXVaR1ZtWVhWc2RDNXpkbU13Z2dFaU1BMEdDU3FHU0liM0RRRUJBUVVBQTRJQkR3QXdnZ0VLQW9JQkFRREcKSTBNdkdPeEFiOEdtRHBvOGdhSHUvNkptczN3Q1FXTUdKSzNPUzdQV20rRWZpK0lkRkZHY0pVTDVvcHBJcWlhTgpDanJyV3FBOXJS [...]
      service:
        name: chaos-mesh-controller-manager
        namespace: "default"
        path: /mutate-chaos-mesh-org-v1alpha1-azurechaos
    failurePolicy: Fail
    name: mazurechaos.kb.io
    timeoutSeconds: 5
    sideEffects: None
    admissionReviewVersions: ["v1", "v1beta1"]
    rules:
      - apiGroups:
          - chaos-mesh.org
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
        resources:
          - azurechaos
  - clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURiakNDQWxhZ0F3SUJBZ0lRRVNEOWFRVFJJTUMvTjVTVW9qK3pxREFOQmdrcWhraUc5dzBCQVFzRkFEQVkKTVJZd0ZBWURWUVFERXcxamFHRnZjeTF0WlhOb0xXTmhNQjRYRFRJME1EUXhOekV4TWpFek9Wb1hEVEk1TURReApOakV4TWpFek9Wb3dOREV5TURBR0ExVUVBeE1wWTJoaGIzTXRiV1Z6YUMxamIyNTBjbTlzYkdWeUxXMWhibUZuClpYSXVaR1ZtWVhWc2RDNXpkbU13Z2dFaU1BMEdDU3FHU0liM0RRRUJBUVVBQTRJQkR3QXdnZ0VLQW9JQkFRREcKSTBNdkdPeEFiOEdtRHBvOGdhSHUvNkptczN3Q1FXTUdKSzNPUzdQV20rRWZpK0lkRkZHY0pVTDVvcHBJcWlhTgpDanJyV3FBOXJS [...]
      service:
        name: chaos-mesh-controller-manager
        namespace: "default"
        path: /mutate-chaos-mesh-org-v1alpha1-gcpchaos
    failurePolicy: Fail
    name: mgcpchaos.kb.io
    timeoutSeconds: 5
    sideEffects: None
    admissionReviewVersions: ["v1", "v1beta1"]
    rules:
      - apiGroups:
          - chaos-mesh.org
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
        resources:
          - gcpchaos
  - clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURiakNDQWxhZ0F3SUJBZ0lRRVNEOWFRVFJJTUMvTjVTVW9qK3pxREFOQmdrcWhraUc5dzBCQVFzRkFEQVkKTVJZd0ZBWURWUVFERXcxamFHRnZjeTF0WlhOb0xXTmhNQjRYRFRJME1EUXhOekV4TWpFek9Wb1hEVEk1TURReApOakV4TWpFek9Wb3dOREV5TURBR0ExVUVBeE1wWTJoaGIzTXRiV1Z6YUMxamIyNTBjbTlzYkdWeUxXMWhibUZuClpYSXVaR1ZtWVhWc2RDNXpkbU13Z2dFaU1BMEdDU3FHU0liM0RRRUJBUVVBQTRJQkR3QXdnZ0VLQW9JQkFRREcKSTBNdkdPeEFiOEdtRHBvOGdhSHUvNkptczN3Q1FXTUdKSzNPUzdQV20rRWZpK0lkRkZHY0pVTDVvcHBJcWlhTgpDanJyV3FBOXJS [...]
      service:
        name: chaos-mesh-controller-manager
        namespace: "default"
        path: /mutate-chaos-mesh-org-v1alpha1-dnschaos
    failurePolicy: Fail
    name: mdnschaos.kb.io
    timeoutSeconds: 5
    sideEffects: None
    admissionReviewVersions: ["v1", "v1beta1"]
    rules:
      - apiGroups:
          - chaos-mesh.org
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
        resources:
          - dnschaos
  - clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURiakNDQWxhZ0F3SUJBZ0lRRVNEOWFRVFJJTUMvTjVTVW9qK3pxREFOQmdrcWhraUc5dzBCQVFzRkFEQVkKTVJZd0ZBWURWUVFERXcxamFHRnZjeTF0WlhOb0xXTmhNQjRYRFRJME1EUXhOekV4TWpFek9Wb1hEVEk1TURReApOakV4TWpFek9Wb3dOREV5TURBR0ExVUVBeE1wWTJoaGIzTXRiV1Z6YUMxamIyNTBjbTlzYkdWeUxXMWhibUZuClpYSXVaR1ZtWVhWc2RDNXpkbU13Z2dFaU1BMEdDU3FHU0liM0RRRUJBUVVBQTRJQkR3QXdnZ0VLQW9JQkFRREcKSTBNdkdPeEFiOEdtRHBvOGdhSHUvNkptczN3Q1FXTUdKSzNPUzdQV20rRWZpK0lkRkZHY0pVTDVvcHBJcWlhTgpDanJyV3FBOXJS [...]
      service:
        name: chaos-mesh-controller-manager
        namespace: "default"
        path: /mutate-chaos-mesh-org-v1alpha1-jvmchaos
    failurePolicy: Fail
    name: mjvmchaos.kb.io
    timeoutSeconds: 5
    sideEffects: None
    admissionReviewVersions: ["v1", "v1beta1"]
    rules:
      - apiGroups:
          - chaos-mesh.org
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
        resources:
          - jvmchaos
  - clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURiakNDQWxhZ0F3SUJBZ0lRRVNEOWFRVFJJTUMvTjVTVW9qK3pxREFOQmdrcWhraUc5dzBCQVFzRkFEQVkKTVJZd0ZBWURWUVFERXcxamFHRnZjeTF0WlhOb0xXTmhNQjRYRFRJME1EUXhOekV4TWpFek9Wb1hEVEk1TURReApOakV4TWpFek9Wb3dOREV5TURBR0ExVUVBeE1wWTJoaGIzTXRiV1Z6YUMxamIyNTBjbTlzYkdWeUxXMWhibUZuClpYSXVaR1ZtWVhWc2RDNXpkbU13Z2dFaU1BMEdDU3FHU0liM0RRRUJBUVVBQTRJQkR3QXdnZ0VLQW9JQkFRREcKSTBNdkdPeEFiOEdtRHBvOGdhSHUvNkptczN3Q1FXTUdKSzNPUzdQV20rRWZpK0lkRkZHY0pVTDVvcHBJcWlhTgpDanJyV3FBOXJS [...]
      service:
        name: chaos-mesh-controller-manager
        namespace: "default"
        path: /mutate-chaos-mesh-org-v1alpha1-schedule
    failurePolicy: Fail
    name: mschedule.kb.io
    timeoutSeconds: 5
    sideEffects: None
    admissionReviewVersions: ["v1", "v1beta1"]
    rules:
      - apiGroups:
          - chaos-mesh.org
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
        resources:
          - schedules
  - clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURiakNDQWxhZ0F3SUJBZ0lRRVNEOWFRVFJJTUMvTjVTVW9qK3pxREFOQmdrcWhraUc5dzBCQVFzRkFEQVkKTVJZd0ZBWURWUVFERXcxamFHRnZjeTF0WlhOb0xXTmhNQjRYRFRJME1EUXhOekV4TWpFek9Wb1hEVEk1TURReApOakV4TWpFek9Wb3dOREV5TURBR0ExVUVBeE1wWTJoaGIzTXRiV1Z6YUMxamIyNTBjbTlzYkdWeUxXMWhibUZuClpYSXVaR1ZtWVhWc2RDNXpkbU13Z2dFaU1BMEdDU3FHU0liM0RRRUJBUVVBQTRJQkR3QXdnZ0VLQW9JQkFRREcKSTBNdkdPeEFiOEdtRHBvOGdhSHUvNkptczN3Q1FXTUdKSzNPUzdQV20rRWZpK0lkRkZHY0pVTDVvcHBJcWlhTgpDanJyV3FBOXJS [...]
      service:
        name: chaos-mesh-controller-manager
        namespace: "default"
        path: /mutate-chaos-mesh-org-v1alpha1-workflow
    failurePolicy: Fail
    name: mworkflow.kb.io
    timeoutSeconds: 5
    sideEffects: None
    admissionReviewVersions: ["v1", "v1beta1"]
    rules:
      - apiGroups:
          - chaos-mesh.org
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
        resources:
          - workflows
  - clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURiakNDQWxhZ0F3SUJBZ0lRRVNEOWFRVFJJTUMvTjVTVW9qK3pxREFOQmdrcWhraUc5dzBCQVFzRkFEQVkKTVJZd0ZBWURWUVFERXcxamFHRnZjeTF0WlhOb0xXTmhNQjRYRFRJME1EUXhOekV4TWpFek9Wb1hEVEk1TURReApOakV4TWpFek9Wb3dOREV5TURBR0ExVUVBeE1wWTJoaGIzTXRiV1Z6YUMxamIyNTBjbTlzYkdWeUxXMWhibUZuClpYSXVaR1ZtWVhWc2RDNXpkbU13Z2dFaU1BMEdDU3FHU0liM0RRRUJBUVVBQTRJQkR3QXdnZ0VLQW9JQkFRREcKSTBNdkdPeEFiOEdtRHBvOGdhSHUvNkptczN3Q1FXTUdKSzNPUzdQV20rRWZpK0lkRkZHY0pVTDVvcHBJcWlhTgpDanJyV3FBOXJS [...]
      service:
        name: chaos-mesh-controller-manager
        namespace: "default"
        path: /mutate-chaos-mesh-org-v1alpha1-httpchaos
    failurePolicy: Fail
    name: mhttpchaos.kb.io
    timeoutSeconds: 5
    sideEffects: None
    admissionReviewVersions: ["v1", "v1beta1"]
    rules:
      - apiGroups:
          - chaos-mesh.org
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
        resources:
          - httpchaos
  - clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURiakNDQWxhZ0F3SUJBZ0lRRVNEOWFRVFJJTUMvTjVTVW9qK3pxREFOQmdrcWhraUc5dzBCQVFzRkFEQVkKTVJZd0ZBWURWUVFERXcxamFHRnZjeTF0WlhOb0xXTmhNQjRYRFRJME1EUXhOekV4TWpFek9Wb1hEVEk1TURReApOakV4TWpFek9Wb3dOREV5TURBR0ExVUVBeE1wWTJoaGIzTXRiV1Z6YUMxamIyNTBjbTlzYkdWeUxXMWhibUZuClpYSXVaR1ZtWVhWc2RDNXpkbU13Z2dFaU1BMEdDU3FHU0liM0RRRUJBUVVBQTRJQkR3QXdnZ0VLQW9JQkFRREcKSTBNdkdPeEFiOEdtRHBvOGdhSHUvNkptczN3Q1FXTUdKSzNPUzdQV20rRWZpK0lkRkZHY0pVTDVvcHBJcWlhTgpDanJyV3FBOXJS [...]
      service:
        name: chaos-mesh-controller-manager
        namespace: "default"
        path: /mutate-chaos-mesh-org-v1alpha1-blockchaos
    failurePolicy: Fail
    name: mblockchaos.kb.io
    timeoutSeconds: 5
    sideEffects: None
    admissionReviewVersions: ["v1", "v1beta1"]
    rules:
      - apiGroups:
          - chaos-mesh.org
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
        resources:
          - blockchaos
  - clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURiakNDQWxhZ0F3SUJBZ0lRRVNEOWFRVFJJTUMvTjVTVW9qK3pxREFOQmdrcWhraUc5dzBCQVFzRkFEQVkKTVJZd0ZBWURWUVFERXcxamFHRnZjeTF0WlhOb0xXTmhNQjRYRFRJME1EUXhOekV4TWpFek9Wb1hEVEk1TURReApOakV4TWpFek9Wb3dOREV5TURBR0ExVUVBeE1wWTJoaGIzTXRiV1Z6YUMxamIyNTBjbTlzYkdWeUxXMWhibUZuClpYSXVaR1ZtWVhWc2RDNXpkbU13Z2dFaU1BMEdDU3FHU0liM0RRRUJBUVVBQTRJQkR3QXdnZ0VLQW9JQkFRREcKSTBNdkdPeEFiOEdtRHBvOGdhSHUvNkptczN3Q1FXTUdKSzNPUzdQV20rRWZpK0lkRkZHY0pVTDVvcHBJcWlhTgpDanJyV3FBOXJS [...]
      service:
        name: chaos-mesh-controller-manager
        namespace: "default"
        path: /mutate-chaos-mesh-org-v1alpha1-physicalmachinechaos
    failurePolicy: Fail
    name: mphysicalmachinechaos.kb.io
    timeoutSeconds: 5
    sideEffects: None
    admissionReviewVersions: ["v1", "v1beta1"]
    rules:
      - apiGroups:
          - chaos-mesh.org
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
        resources:
          - physicalmachinechaos
  - clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURiakNDQWxhZ0F3SUJBZ0lRRVNEOWFRVFJJTUMvTjVTVW9qK3pxREFOQmdrcWhraUc5dzBCQVFzRkFEQVkKTVJZd0ZBWURWUVFERXcxamFHRnZjeTF0WlhOb0xXTmhNQjRYRFRJME1EUXhOekV4TWpFek9Wb1hEVEk1TURReApOakV4TWpFek9Wb3dOREV5TURBR0ExVUVBeE1wWTJoaGIzTXRiV1Z6YUMxamIyNTBjbTlzYkdWeUxXMWhibUZuClpYSXVaR1ZtWVhWc2RDNXpkbU13Z2dFaU1BMEdDU3FHU0liM0RRRUJBUVVBQTRJQkR3QXdnZ0VLQW9JQkFRREcKSTBNdkdPeEFiOEdtRHBvOGdhSHUvNkptczN3Q1FXTUdKSzNPUzdQV20rRWZpK0lkRkZHY0pVTDVvcHBJcWlhTgpDanJyV3FBOXJS [...]
      service:
        name: chaos-mesh-controller-manager
        namespace: "default"
        path: /mutate-chaos-mesh-org-v1alpha1-physicalmachine
    failurePolicy: Fail
    name: mphysicalmachine.kb.io
    timeoutSeconds: 5
    sideEffects: None
    admissionReviewVersions: ["v1", "v1beta1"]
    rules:
      - apiGroups:
          - chaos-mesh.org
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
        resources:
          - physicalmachines
  - clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURiakNDQWxhZ0F3SUJBZ0lRRVNEOWFRVFJJTUMvTjVTVW9qK3pxREFOQmdrcWhraUc5dzBCQVFzRkFEQVkKTVJZd0ZBWURWUVFERXcxamFHRnZjeTF0WlhOb0xXTmhNQjRYRFRJME1EUXhOekV4TWpFek9Wb1hEVEk1TURReApOakV4TWpFek9Wb3dOREV5TURBR0ExVUVBeE1wWTJoaGIzTXRiV1Z6YUMxamIyNTBjbTlzYkdWeUxXMWhibUZuClpYSXVaR1ZtWVhWc2RDNXpkbU13Z2dFaU1BMEdDU3FHU0liM0RRRUJBUVVBQTRJQkR3QXdnZ0VLQW9JQkFRREcKSTBNdkdPeEFiOEdtRHBvOGdhSHUvNkptczN3Q1FXTUdKSzNPUzdQV20rRWZpK0lkRkZHY0pVTDVvcHBJcWlhTgpDanJyV3FBOXJS [...]
      service:
        name: chaos-mesh-controller-manager
        namespace: "default"
        path: /mutate-chaos-mesh-org-v1alpha1-statuscheck
    failurePolicy: Fail
    name: mstatuscheck.kb.io
    timeoutSeconds: 5
    sideEffects: None
    admissionReviewVersions: ["v1", "v1beta1"]
    rules:
      - apiGroups:
          - chaos-mesh.org
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
        resources:
          - statuschecks
  - clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURiakNDQWxhZ0F3SUJBZ0lRRVNEOWFRVFJJTUMvTjVTVW9qK3pxREFOQmdrcWhraUc5dzBCQVFzRkFEQVkKTVJZd0ZBWURWUVFERXcxamFHRnZjeTF0WlhOb0xXTmhNQjRYRFRJME1EUXhOekV4TWpFek9Wb1hEVEk1TURReApOakV4TWpFek9Wb3dOREV5TURBR0ExVUVBeE1wWTJoaGIzTXRiV1Z6YUMxamIyNTBjbTlzYkdWeUxXMWhibUZuClpYSXVaR1ZtWVhWc2RDNXpkbU13Z2dFaU1BMEdDU3FHU0liM0RRRUJBUVVBQTRJQkR3QXdnZ0VLQW9JQkFRREcKSTBNdkdPeEFiOEdtRHBvOGdhSHUvNkptczN3Q1FXTUdKSzNPUzdQV20rRWZpK0lkRkZHY0pVTDVvcHBJcWlhTgpDanJyV3FBOXJS [...]
      service:
        name: chaos-mesh-controller-manager
        namespace: "default"
        path: /mutate-chaos-mesh-org-v1alpha1-remotecluster
    failurePolicy: Fail
    name: mremotecluster.kb.io
    timeoutSeconds: 5
    sideEffects: None
    admissionReviewVersions: ["v1", "v1beta1"]
    rules:
      - apiGroups:
          - chaos-mesh.org
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
        resources:
          - remotecluster
